css/dashboard.css
.header {
    background-color: #5465ff;
    margin-top: 0 !important;
    padding: 1rem;
    font-size: 2rem;
    display: flex;
    justify-content: space-between;
}

.header span { font-size: inherit; }

.main {
    background-color: #788bff;
    display: flex;
    flex: 1;
}

.main-title {
    text-align: left;
    margin-bottom: 2rem;
    padding-left: 1rem;
}

.main-content {
    display: flex;
    flex-direction: column;
    flex: 1;
    padding: 2rem;
}

.main-inner {
    display: flex;
    flex: 1;
    margin: 1rem;
    gap: 1rem;
}

.main-center {
    flex: 1;
    background-color: #495057;
    border-radius: 20px;
    height: 100%;
    text-align: center;
}

.main-right {
    flex: 1;
    background-color: #495057;
    border-radius: 20px;
    height: 100%;
    text-align: center;
}

.main-left {
    background-color: #343a40;
    padding: 1rem 2rem;
    width: fit-content;
}

.menu {
    flex: 1;
    list-style-type: none;
    font-size: 1.5rem;
    padding: 0;
    margin: 0;
}

.menu li { margin-bottom: 1rem; }
.menu li:last-child { margin-bottom: 0;}

.menu li a {
    text-decoration: none;
    color: #e2fdff;
    display: flex;
    gap: 0.5rem;
}

.menu span { font-size: inherit; }

.footer {
    background-color: #5465ff;
    margin-top: 0 !important;
    padding: 1rem;
    font-size: 1.5rem;
    text-align: center;
}

#gray-button {
    background-color: #ADB5BD;
    color: #343A40;
    border: transparent;
    border-radius: 30px;
    padding: 0.5rem;
    gap: 0.5rem;
}

#gray-button span { 
    font-size: inherit;
}

